--- a/how.html
+++ b/how.html
@@ -78,7 +78,7 @@
 		        <div class="navbar-header">
 		        	<!-- Mobile Toggle Menu Button -->
 					<a href="#" class="js-fh5co-nav-toggle fh5co-nav-toggle" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar"><i></i></a>
-		          	<a class="navbar-brand" href="index.html"><img src="images/logo.png" alt="Website Logo" width="120" height="60"><span>.</span></a>
+		          	<a class="navbar-brand" href="index.html"><img src="http://image.farm/images/2018/01/28/0d735a01d12ba9d9924602dcd86f58cc.png" alt="Website Logo" width="120" height="60"><span>.</span></a>
 		        </div>
 		        <div id="navbar" class="navbar-collapse collapse">
 		          <ul class="nav navbar-nav navbar-right">
